--- a/src/pages/cv.mdx
+++ b/src/pages/cv.mdx
@@ -33,7 +33,7 @@ import VisitorMap from '@site/src/components/VisitorMap';
           <div className="cvTimelineTitle">Integrated Master-Ph.D. in Crop Science</div>
           <div className="cvTimelineSubtitle">Shihezi University (SHZU) × CAS-CEMPS</div>
           <p>- 2021-2023: Master's stage</p>
-          <p>- 2023-2026: Ph.D. stage (Joint Training)</p>
+          <p>- 2023-2026: Ph.D. stage</p>
           <p>Research focus: Cotton canopy photosynthetic modeling and crop phenomics.</p>
           <div className="cvBadgeContainer">
             <span className="cvBadge">Precision Agriculture</span>
